@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.74 2014/05/15 14:41:53 adam Exp $
+# $NetBSD: Makefile,v 1.75 2014/08/14 19:36:04 shattered Exp $
 
-DISTNAME=	pstoedit-3.60
-PKGREVISION=	15
+DISTNAME=	pstoedit-3.62
 CATEGORIES=	converters graphics print
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=pstoedit/}
 
@@ -44,6 +43,7 @@ post-install:
 	done
 	${INSTALL_DATA} ${DOCSRC}/readme.txt	${DESTDIR}${DOCDIR}
 
+.include "../../archivers/libzip/buildlink3.mk"
 .include "../../graphics/gd/buildlink3.mk"
 .include "../../graphics/ImageMagick/buildlink3.mk"
 .include "../../graphics/plotutils/buildlink3.mk"
